k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
  namespace: monitoring
spec:
  selector:
    app: prometheus-deployment
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
