k8s/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  defaultBackend:
    service:
      name: prometheus-service
      port:
        number: 9090
  rules:
    - host: alertmanager.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: alertmanager-service
                port:
                  number: 9093

    - host: prometheus.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /metrics
            backend:
              service:
                name: node-exporter-service
                port:
                  number: 9100
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
  ingressClassName: nginx
